--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,10 @@ dist.jar=${dist.dir}/scrabble-bot.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.scrabble.utils-1.0.0-SNAPSHOT-jar-with-dependencies__1_.jar=C:\\scrabble\\scrabble.utils-1.0.0-SNAPSHOT-jar-with-dependencies (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Groovy 1.8.classpath}:\
-    ${file.reference.scrabble.utils-1.0.0-SNAPSHOT-jar-with-dependencies__1_.jar}:\
-    ${libs.junit_4.classpath}
+    ${libs.Groovy 1.8.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
